I hate Git Commands