@@ -1,11 +1,11 @@
 package cuchaz.enigma.config;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Deque;
 import java.util.LinkedList;
+import java.util.Objects;
 
 public class ConfigContainer {
 
@@ -19,10 +19,10 @@ public class ConfigContainer {
 	}
 
 	public void save() {
-		if (this.configPath == null) throw new IllegalStateException("File has no config path set!");
+		Objects.requireNonNull(configPath, "File has no config path set!");
 		try {
 			Files.createDirectories(this.configPath.getParent());
-			Files.write(this.configPath, this.serialize().getBytes(StandardCharsets.UTF_8));
+			Files.writeString(this.configPath, this.serialize());
 			this.existsOnDisk = true;
 		} catch (IOException e) {
 			e.printStackTrace();
